# manualmakerai

./: .gitignore  FAQ.md  INDEX.md  README.md  banco-de-dados.md  banco_de_dados.md  bibliotecas_e_frameworks.md  componentes_de_hardware.md  dicas-e-truques.md  erros_solucoes_banco_de_dados.md  generate_db_docs.py  generate_nativos_docs.py  generate_resources_docs.py  generate_war_docs.py  geral.md  historico_de_alteracoes.md  instalacao_e_execucao_do_maker.md  intro.md  maker-mobile.md  maker.md  scraper.py  tags.md  topicos-de-erros.md  versoes_homologadas.md
manual_maker_ai/: .cursorrules  ANALISE_REGRAS_FRZ.md  CadastroDeDocumentos.frz  CadastroPessoa.frz  CadastroPessoa_extracted.xml  CalcularFolhaCLT.frz  CalcularFolhaCLT.md  CalculoFolhaCLT.frz  ExemplosFRZ.frz  KMLGoogleMaps.frz  Perfil_Usuario.frz  TesteRegraServidor.frz  ValidarLoginServidor.frz  ValidarLoginServidor_final.frz  ValidarLoginServidor_v2.frz  ai.md  analyze_frz_forms.py  extract_rules_analysis.py  frz_forms_analysis.txt  frz_forms_data.json  gerar_cadastro_pessoa.py  gerar_folha_pagamento.py  gerar_frz_cadastro_pessoa.py  gerar_frz_regra_teste.py  gerar_kml_mapa.py  gerar_perfil_usuario.py  mindsoft.md  setup.sh  webrun.md
manual_maker_ai/FAQ/: desenvolvimento_no_maker.md  estruturas_do_maker.md  recursos_avancados.md
manual_maker_ai/ai/: assistente-de-criacao-de-formul%C3%A1rios.md  assistente-fluxogramas.md  (+3 more)
manual_maker_ai/frz-compiler/: Cargo.toml  Makefile  README.md
manual_maker_ai/frz-compiler/src/: bridge.py  builder.rs  dfm.rs  encoder.rs  lib.rs  main.rs  script.rs  spec.rs
(+793 files in other folders)
