[package]
name = "frz-compiler"
version = "0.1.0"
edition = "2021"
description = "Compilador determinístico de specs JSON para arquivos FRZ (Maker/WebRun)"
license = "MIT"

[[bin]]
name = "frz-compiler"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
flate2 = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
